syntax = "proto3";
import "google/protobuf/wrappers.proto";



option csharp_namespace = "ShoppyEx.Order.Api";

package protos.package;

service BasketItemGrpc {  	  
  
}

message ChangeBasketCommand {
     google.protobuf.StringValue BasketId = 1;
     google.protobuf.StringValue ProductId = 2;
     google.protobuf.StringValue Price = 3;
     google.protobuf.Int32Value  Quantity = 4; 
}

message CreateBasketItemCommand {     
     google.protobuf.StringValue ProductId = 2;
     google.protobuf.StringValue Price = 3;
     google.protobuf.Int32Value  Quantity = 4;    

}
message GetCurrentBasketItemResponse{
     google.protobuf.StringValue Id = 1;
     google.protobuf.StringValue BasketId = 2;
     google.protobuf.StringValue ProductId = 3;
     google.protobuf.StringValue Price = 4;
     google.protobuf.Int32Value  Quantity = 5; 
}


